Added: Example for Instagram geography callback (using fixtured request/VCR)

--- a/spec/fixtures/requests/instagram/subscription/geography/callback/default.yml
+++ b/spec/fixtures/requests/instagram/subscription/geography/callback/default.yml
@@ -4,21 +4,21 @@ http_interactions:
     method: post
     uri: http://localhost:3000/instagram/subscription/geography/callback
     path: "/instagram/subscription/geography/callback"
-    query_string: ''
+    query_string: ""
     body:
       encoding: ASCII-8BIT
-      string: '[{"changed_aspect": "media", "object": "geography", "object_id": "12869757",
-        "time": 1439580929, "subscription_id": 18804076, "data": {}}]'
+      string: '[{"changed_aspect": "media", "object": "geography", "object_id": "12927815",
+        "time": 1439604298, "subscription_id": 19538940, "data": {}}]'
     headers:
       Host:
       - localhost:3000
       X-Hub-Signature:
-      - 2b0f34a32ac65ad8f0b7e39759cc00475cb41555
+      - c3bf5b9a5286fa4831050df0e2581b034a7f945e
       Accept-Encoding:
       - gzip, deflate
       User-Agent:
       - Python-httplib2/0.8 (gzip)
       Version:
       - HTTP/1.1
-  recorded_at: '2015-08-14T15:35:30-04:00'
+  recorded_at: '2015-08-14T22:05:12-04:00'
 recorded_with: Butterfli Rack Recorder
